feat: Implement initial stock data collection and analysis services, including file-based ticker input and analysis reporting.