@@ -1,5 +1,6 @@
 package com.stock.screener.collector.adapter.out.file;
 
+import com.stock.screener.collector.application.port.out.file.TickerReaderException;
 import com.stock.screener.collector.application.port.out.file.TickerReaderPort;
 import jakarta.enterprise.context.ApplicationScoped;
 import lombok.extern.slf4j.Slf4j;
@@ -9,9 +10,7 @@ import java.io.BufferedReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @ApplicationScoped
@@ -22,30 +21,29 @@ public class FileTickerReaderAdapter implements TickerReaderPort {
 
     @Override
     public List<String> readTickers() {
-        log.info("Rozpoczęto wczytywanie tickerów z pliku: {}", tickersFilePath);
+        log.info("Reading tickers from file: {}", tickersFilePath);
 
         try (InputStream is = getClass().getClassLoader().getResourceAsStream(tickersFilePath)) {
             if (is == null) {
-                String errMsg = "Plik " + tickersFilePath
-                        + " nie został znaleziony w resources. Wymagany plik z tickerami do analizy.";
+                String errMsg = "File " + tickersFilePath + " not found in resources.";
                 log.error(errMsg);
-                throw new IllegalStateException(errMsg);
+                throw new TickerReaderException(errMsg);
             }
 
             try (BufferedReader reader = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8))) {
                 List<String> tickers = reader.lines()
                         .map(String::trim)
-                        .filter(line -> !line.isEmpty() && !line.startsWith("#")) // Ignoruj puste linie i komentarze
-                        .collect(Collectors.toList());
+                        .filter(line -> !line.isEmpty() && !line.startsWith("#"))
+                        .toList();
 
-                log.info("Pomyślnie wczytano {} tickerów.", tickers.size());
+                log.info("Successfully loaded {} tickers.", tickers.size());
                 return tickers;
             }
-        } catch (IllegalStateException e) {
+        } catch (TickerReaderException e) {
             throw e;
         } catch (Exception e) {
-            log.error("Błąd podczas wczytywania pliku z tickerami: {}", tickersFilePath, e);
-            throw new RuntimeException("Nie udało się odczytać pliku tickerów", e);
+            log.error("Error reading ticker file: {}", tickersFilePath, e);
+            throw new TickerReaderException("Failed to read tickers from: " + tickersFilePath, e);
         }
     }
 }
